Изменения на сайте 1. Переделан фон в блоке banner 2. В блоке services преревёрстаны блоки с помощью flexbox 3. Файловая структура css-каталога разбита на папку blocks, в которую помещены блоки по методологии БЭМ 4. Размер шрифта сайта и отступы сделаны адаптивно 5. Блок portfolio перевёрстан с помощью flexbox Итог: 1. Первые 4 блока сайта сделаны, необходимо добавить адаптивность 2. Последние два блока переверстать и добавить адаптивность

--- a/css/style.less
+++ b/css/style.less
@@ -14,30 +14,59 @@
     font-style: normal;
 }
 
+@import "blocks/main-container.less";
+@import "blocks/header.less";
+@import "blocks/menu.less";
+@import "blocks/home.less";
+@import "blocks/title.less";
+@import "blocks/home.less";
+@import "blocks/button.less";
+@import "blocks/section.less";
+@import "blocks/portfolio.less";
+
+@media screen and (min-width: 1401px){
+    html{
+        font-size: 70%;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1400px){
+    html{
+        font-size: 62.5%;
+    }
+}
+
+@media screen and (max-width: 767px){
+    html{
+        font-size: 52.5%;
+    }
+}
+
 body{
     margin: 0;
-    font-family: Arial,Helvetica,sans-serif;
+    font-family: Arial, sans-serif;
+    font-size: 1.6rem;
     background: #fff;
 }
 
 h1{
-    font-size: 28px;
+    font-size: 1.75rem;
 }
 
 h2{
-    font-size: 26px;
+    font-size: 1.625rem;
 }
 
 h3{
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 h4{
-    font-size: 22px;
+    font-size: 1.375rem;
 }
 
 p{
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
     font-family: Arial;
 }
 
@@ -47,66 +76,9 @@ p:last-child{
 }
 
 img{
+    display: inline-block;
     max-width: 100%;
     height: auto;
-}
-
-.main-container{
-    min-width: 768px;
-    max-width: 1170px;
-    margin: 0 auto;
-    padding: 0 2%;
-}
-
-.header{
-    color: #474444;
-}
-
-.header__container{
-    display: flex;
-    justify-content: space-between;
-}
-
-.title{
-    font-family: "Oswald";
-    text-transform: uppercase;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.header__logo{
-    font-family: "Oswald";
-    font-size: 70px;
-    font-weight: 400;
-    text-transform: uppercase;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.header__char{
-    color: #fd5433;
-}
-
-.menu{
-    font-size: 17px;
-    font-family: "Oswald";
-}
-
-.menu__list{
-    padding-left: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    list-style-type: none;
-}
-
-.menu__list-item{
-    float: left;
-}
-
-.menu__list:after{
-    display: block;
-    content: "";
-    clear: left;
 }
 
 a{
@@ -117,166 +89,16 @@ a:focus, a:hover{
     color: #fd5433;
 }
 
-.link{
-    color: inherit;
-}
-
-.menu__link{
-    display: inline-block;
-    font-size: 17px;
-    font-weight: 700;
-    padding: 47px 15px;
-}
-
-.menu__link:hover, .menu__link:focus{
-    background-color: #fd5433;
-    color: #fff;
-    outline: none;
-}
-
-.home{
-    font-family: "Oswald";
-}
-
-.home-container{
-    position: relative;
-    background-color: #000;
-    opacity: .9;
-}
-
-.home-container:before{
-    content: "";
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    background-image: url("../img/Banner.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-.home__content{
-    color: #fff;
-    text-align: center;
-    padding-top: 229px;
-    padding-bottom: 334px;
-}
-
-.home__text{
-    text-transform: uppercase;
-    font-size: 120px;
-}
-
-.home__item{
-    margin-top: 57px;
-}
-
-.home__button{
-    padding: 13px 54px 11px;
-    font-size: 32px;
-    border-radius: 5px;
-}
-
-.home__button:focus{
-    outline: 2px solid #fff;
-}
-
-.button{
-    transition: background .5s ease-in;
-    font-weight: 700;
-    color: #fff;
-    background: #fd5433;
-    border-top: 2px solid #ff6d51;
-    box-shadow: 0 6px 4px -4px #000;
-}
-
-.button:focus, .button:hover{
-    background: #ff6d51;
-    color: #fff;
-}
-
-.section{
-    margin-top: 38px;
-}
-
-.section__services{
-    padding-bottom: 81px;
-    border-bottom: 1px solid #474444;
-}
-
-.section__title{
-    margin-bottom: 36px;
-    text-align: center;
-    font-weight: 700;
-    color: #fd5433;
-}
-
-.section__content{
-    padding-top: 36px;
-    border-top: 1px solid #474444;
-}
-
-.section__name{
-    margin-bottom: 34px;
-    font-size: 30px;
-    font-weight: 700;
-    color: #474747;
-}
-
-.section__branding, .section__design, .section__marketing{
-    display: inline-block;
-    vertical-align: bottom;
-    width: 32%;
-    text-align: center;
-    padding-top: 200px;
-    margin-right: 1%;
-    background-position-x: center;
-    background-repeat: no-repeat;
-}
-
-.section__branding{
-    background-image: url("../img/PEN.jpg");
-}
-
-.section__design{
-    background-image: url("../img/PC.jpg");
-}
-
-.section__marketing{
-    background-image: url("../img/Mic.jpg");
-    margin-right: 0;
-}
-
-.section__services-content{
-    width: 78%;
-    margin: 0 auto;
-}
-
-.protfolio__content{
-    border-top: 0;
-}
-
-.portfolio__img{
-    float: left;
-    width: 16.66%;
-}
-
-.portfolio__column:after{
-    display: block;
-    content: "";
-    clear: left;
-}
-
 .about__header{
     display: flex;
     justify-content: space-between;
-    margin-top: 65px;
-    margin-bottom: 65px;
+    margin-top: 6.5rem;
+    margin-bottom: 6.5rem;
 }
 
 .about__content{
     position: relative;
-    padding: 66px 0 45px;
+    padding: 6.6rem 0 4.5rem;
     background-color: #fd5433;
     background-repeat: no-repeat;
     background-size: cover;
@@ -300,12 +122,12 @@ a:focus, a:hover{
     top: 100%;
     transform: translate(-50%, 65px);
     z-index: 1;
-    border: 20px solid transparent;
-    border-top: 40px solid #fff;
+    border: 2rem solid transparent;
+    border-top: 4rem solid #fff;
 }
 
 .member__title{
-    font: 22px "Oswald-Bold";
+    font: 2.2rem "Oswald-Bold";
     color: inherit;
     margin: 0 0 38px;
 }
@@ -314,16 +136,16 @@ a:focus, a:hover{
     font-family: Arial;
     color: #fff;
     width: 80%;
-    margin-top: 12px;
+    margin-top: 1.2rem;
 }
 
 .member__socials{
-    margin-top: 53px;
+    margin-top: 5.3rem;
 }
 
 .member__socials-link{
     text-decoration: none;
-    margin-right: 20px;
+    margin-right: 2rem;
 }
 
 .skill{
@@ -341,7 +163,7 @@ a:focus, a:hover{
 }
 
 .skill__column-bar{
-    padding-top: 59px;
+    padding-top: 5.9rem;
     width: 59%;
 }
 
@@ -349,14 +171,14 @@ a:focus, a:hover{
     font-family: Arial;
     color: #fff;
     width: 80%;
-    margin-top: 12px;
+    margin-top: 1.2rem;
 }
 
 .skill__bar-row:not(:nth-of-type(1)){
     display: inline-block;
     vertical-align: middle;
     width: 100%;
-    margin-top: 13px;
+    margin-top: 1.3rem;
 }
 
 progress::-webkit-progress-bar{
@@ -370,7 +192,7 @@ progress::-webkit-progress-value{
 .skill__bar{
     display: inline-block;
     vertical-align: middle;
-    height: 10px;
+    height: 1rem;
     width: 75%;
     margin: 0;
     background: #fff;
@@ -381,7 +203,7 @@ progress::-webkit-progress-value{
     display: inline-block;
     vertical-align: top;
     width: 49%;
-    margin-right: 10px;
+    margin-right: 1rem;
 }
 
 .posts__item-column{
@@ -389,44 +211,44 @@ progress::-webkit-progress-value{
 }
 
 .posts__article{
-    margin-top: 90px;
+    margin-top: 9rem;
 }
 
 .posts__content{
-    padding-bottom: 99px;
-    border-bottom: 1px solid #474444;
+    padding-bottom: 9.9rem;
+    border-bottom: .1rem solid #474444;
 }
 
 .posts__column-content{
     display: inline-block;
     vertical-align: top;
     width: 48%;
-    margin-left: 17px;
+    margin-left: 1.7rem;
     color: #686868;
 }
 
 .posts__title{
-    font: 25px "Oswald-Bold";
+    font-size: 25px;
     color: #3d3c3c;
     margin-top: 0;
     margin-bottom: 0;
 }
 
 .posts__date{
-    margin-top: 10px;
-    padding-bottom: 18px;
-    font: 15px "Oswald-Bold";
+    margin-top: 1rem;
+    padding-bottom: 1.8rem;
+    font: 1.5rem "Oswald-Bold";
 }
 
 .posts__month-hr{
-    padding-bottom: 14px;
-    border-bottom: 4px solid #fd5433;
+    padding-bottom: 1.4rem;
+    border-bottom: .4rem solid #fd5433;
 }
 
 .posts__column-text{
     width: 88%;
-    margin-top: 30px;
-    font: 16px Arial;
+    margin-top: 3rem;
+    font: 1.6rem Arial;
 }
 
 .contact__content{
@@ -434,56 +256,56 @@ progress::-webkit-progress-value{
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-bottom: 30px;
+    padding-bottom: 3rem;
     width: 100%;
     position: relative;
     border: 0;
 }
 
 .feedback{
-    padding: 28px 10px 0;
+    padding: 2.8rem 1rem 0;
     text-align: center;
-    font-size: 20px;
+    font-size: 2rem;
     color: #fd5433;
 }
 
 ::-webkit-input-placeholder{
-   font-size: 20px;
+   font-size: 2rem;
    color:  #fd5433;
 }
 
 .feedback__name{
     box-sizing: border-box;
-    padding: 21px 21px 19px;
+    padding: 2.1rem 2.1rem 1.9rem;
     width: 48.5%;
-    font-size: 20px;
+    font-size: 2rem;
     color: #fd5433;
 }
 
 .feedback__email{
     box-sizing: border-box;
-    padding: 21px 21px 19px;
+    padding: 2.1rem 2.1rem 1.9rem;
     margin-left: 2.7%;
     width: 48%;
-    font-size: 20px;
+    font-size: 2rem;
     color: #fd5433;
 }
 
 .feedback__message{
     box-sizing: border-box;
     width: 100%;
-    padding: 21px 21px 19px;
-    margin-top: 28px;
-    font-size: 20px;
+    padding: 2.1rem 2.1rem 1.9rem;
+    margin-top: 2.8rem;
+    font-size: 2rem;
     color:  #fd5433;
 }
 
 .feedback__button{
-    font: 26px "Oswald-Bold";
+    font-size: 2.6rem;
     box-sizing: border-box;
     width: 100%;
-    padding: 15px 0 12px;
-    margin-top: 24px;
+    padding: 1.5rem 0 1.2rem;
+    margin-top: 2.4rem;
     border-bottom: 0;
     border-right: 0;
     border-left: 0;
@@ -491,13 +313,13 @@ progress::-webkit-progress-value{
 }
 
 .footer{
-    margin-top: 83px;
-    border-top: 1px solid #fff;
+    margin-top: 8.3rem;
+    border-top: .1rem solid #fff;
 }
 
 .footer__content{
-    margin-top: 20px;
+    margin-top: 2rem;
     text-align: center;
-    font-size: 18px;
+    font-size: 1.8rem;
     color: #fff;
 }
