--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -11,7 +11,7 @@
 
 .header__logo{
     font-family: "Oswald";
-    font-size: 70px;
+    font-size: 7rem;
     font-weight: 400;
     text-transform: uppercase;
     margin-top: 0;
