--- a/css/blocks/main-container.less
+++ b/css/blocks/main-container.less
@@ -1,6 +1,25 @@
 .main-container{
     position: relative;
-    max-width: 1170px;
     margin: 0 auto;
     padding: 0 2%;
+}
+@media screen and (min-width: 768px) and (max-width: 1170){
+
+    .main-container{
+        max-width: 1170px;
+    }
+}
+
+@media screen and (max-width: 767){
+
+    .main-container{
+        max-width: 600px;
+    }
+}
+
+@media screen and (max-width: 400){
+
+    .main-container{
+        max-width: 300px;
+    }
 }
