--- a/css/style.less
+++ b/css/style.less
@@ -25,21 +25,31 @@
 @import "blocks/portfolio.less";
 
 @media screen and (min-width: 1401px){
+
     html{
         font-size: 70%;
     }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1400px){
+
     html{
         font-size: 62.5%;
     }
 }
 
 @media screen and (max-width: 767px){
+
     html{
         font-size: 52.5%;
     }
+}
+
+@media screen and (max-width: 399px){
+
+    html{
+    font-size: 32.5%;
+  }
 }
 
 body{
