Перевёрстан блок about 1. Перевёрстан блок about, кроме блока с ссылками 2. В разметке добавлены элементы для переключения табов

--- a/css/blocks/home.less
+++ b/css/blocks/home.less
@@ -42,6 +42,10 @@
     opacity: .4;
 }
 
+.home__content{
+    position: relative;
+}
+
 .home__text{
     text-transform: uppercase;
     font-size: 12rem;
