--- a/css/blocks/main-container.less
+++ b/css/blocks/main-container.less
@@ -1,23 +1,22 @@
 .main-container{
-    position: relative;
     margin: 0 auto;
-    padding: 0 2%;
+    padding: 0 5%;
 }
-@media screen and (min-width: 768px) and (max-width: 1170){
+@media screen and (min-width: 768px) and (max-width: 1170px){
 
     .main-container{
         max-width: 1170px;
     }
 }
 
-@media screen and (max-width: 767){
+@media screen and (max-width: 767px){
 
     .main-container{
         max-width: 600px;
     }
 }
 
-@media screen and (max-width: 400){
+@media screen and (max-width: 400px){
 
     .main-container{
         max-width: 300px;
