Перевёрстан блок со skills в about us 1. Добавлен элемент about__skill  в блок about для позиционирования элемента. 2. Блок skill выступает в качестве служебного блока, для простоты создания элементов (в БЭМ отсутствуют элементы элементов).

--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -26,8 +26,6 @@
     display: none;
 }
 
-
-
 .about__info-title{
     font-size: 2.2rem;
     text-transform: none;
@@ -36,4 +34,13 @@
 
 .about__description{
     margin-bottom: 5.1rem;
+}
+
+.about__skill{
+    display: flex;
+    align-items: center;
+}
+
+.about__skill:not(:first-child){
+    margin-top: 1.3rem;
 }
